# autonomous_agent_template

./: CMakeLists.txt  LICENSE  README.md  default.nix  fetchNixpkgs.nix  package.xml  release.nix  setup.py
launch/: trader.launch  worker.launch
robonomics/: acl.yaml  model.txt
scripts/: trader_node  worker_node
